# gauss

./: README.md  version.md
doc/: Makefile  make.bat
dynamixel-workbench/: .dynamixel_workbench.rosinstall  .gitignore  .travis.yml  ISSUE_TEMPLATE.md  README.md
dynamixel-workbench-msgs/: .travis.yml  README.md
dynamixel-workbench-msgs/dynamixel_workbench_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel-workbench-msgs/dynamixel_workbench_msgs/msg/: AX.msg  DynamixelInfo.msg  DynamixelLoadInfo.msg  DynamixelState.msg  DynamixelStateList.msg  EX.msg  MX.msg  MX2.msg  MX2Ext.msg  MXExt.msg  PRO.msg  PROExt.msg  RX.msg  XH.msg  XL.msg  XL320.msg  XM.msg  XMExt.msg
dynamixel-workbench-msgs/dynamixel_workbench_msgs/srv/: DynamixelCommand.srv  GetDynamixelInfo.srv  JointCommand.srv  WheelCommand.srv
dynamixel-workbench/dynamixel_workbench/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel-workbench/dynamixel_workbench_controllers/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: multi_port.h  position_control.h  torque_control.h  velocity_control.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: multi_port.launch  position_control.launch  torque_control.launch  velocity_control.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: multi_port.cpp  position_control.cpp  torque_control.cpp  velocity_control.cpp
dynamixel-workbench/dynamixel_workbench_operators/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel-workbench/dynamixel_workbench_operators/src/: joint_operator.cpp  wheel_operator.cpp
dynamixel-workbench/dynamixel_workbench_single_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel-workbench/dynamixel_workbench_single_manager/include/dynamixel_workbench_single_manager/: single_dynamixel_controller.h  single_dynamixel_monitor.h
dynamixel-workbench/dynamixel_workbench_single_manager/launch/: single_manager.launch  single_monitor.launch
dynamixel-workbench/dynamixel_workbench_single_manager/src/: single_dynamixel_controller.cpp  single_dynamixel_monitor.cpp
dynamixel-workbench/dynamixel_workbench_toolbox/: CHANGELOG.rst  CMakeLists.txt  library.properties  package.xml
gauss_bringup/: CMakeLists.txt  README.md  package.xml
gauss_bringup/config/: gauss_driver.yaml  rpi_ros_processes.yaml  rpi_ros_processes_simulator.yaml
gauss_bringup/config/v1/: gauss_motors.yaml  robot_command_validation.yaml  stepper_params.yaml
gauss_bringup/config/v2/: gauss_motors.yaml
gauss_bringup/launch/: .gauss_base.launch.swp  controllers.launch  desktop_rviz_simulation.launch  gauss_base.launch  robot_commander.launch  robot_commander_pilz.launch  robot_commander_simulator.launch  rpi_setup.launch  rpi_setup_simulator.launch  user_interface.launch
gauss_bringup/scripts/: gauss-ros-start  install
gauss_bringup/systemd/: gauss-ros.service
gauss_commander/: CMakeLists.txt  package.xml  setup.py
gauss_commander/scripts/: arm_commander.py  gauss_IK_server.py  gauss_commander_node.py  gauss_robot_state_publisher.py  position_manager.py  robot_commander.py  test_commander_joint.py  test_commander_joint_home.py  tool_commander.py  trajectory_manager.py
gauss_commander/src/gauss_commander/: command_status.py  command_type.py  gauss_file_exception.py  gauss_ros_logger.py  move_group_arm.py  moveit_utils.py  parameters_validation.py  robot_commander_exception.py
gauss_commander/src/gauss_commander/position/: position.py  position_command_type.py  position_file_handler.py
gauss_commander/src/gauss_commander/trajectory/: trajectory.py  trajectory_command_type.py  trajectory_file_handler.py
gauss_description/: CMakeLists.txt  package.xml
gauss_description/config/: default_config.rviz
gauss_description/launch/: display.launch
gauss_description/meshes/: base_link.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
gauss_description/urdf/: gauss.urdf.xacro  ikfast61_gauss_arm.cpp  without_mesh_gauss.urdf.xacro
gauss_driver/: CMakeLists.txt  package.xml
gauss_driver/config/: gauss_controllers.yaml
gauss_driver/include/common/: common.h
gauss_driver/include/gauss_driver/: change_hardware_version.h
gauss_driver/include/gauss_driver/communication/: can_communication.h  communication_base.h  dxl_communication.h  fake_communication.h  gauss_communication.h
gauss_driver/include/gauss_driver/dynamixel/: dxl_driver.h  dxl_motor_state.h  xl320_driver.h  xl430_driver.h
gauss_driver/include/gauss_driver/hw_interface/: gauss_hardware_interface.h
gauss_driver/include/gauss_driver/ros_interface/: ros_interface.h
gauss_driver/include/gauss_driver/rpi/: rpi_diagnostics.h
gauss_driver/include/gauss_driver/stepper/: gauss_can_driver.h  stepper_motor_state.h
gauss_driver/src/: change_hardware_version.cpp  gauss_driver_node.cpp
gauss_driver/src/communication/: can_communication.cpp  dxl_communication.cpp  fake_communication.cpp  gauss_communication.cpp
gauss_driver/src/dynamixel/: dxl_driver.cpp  xl320_driver.cpp  xl430_driver.cpp
gauss_driver/src/hw_interface/: gauss_hardware_interface.cpp
gauss_driver/src/ros_interface/: ros_interface.cpp
gauss_driver/src/rpi/: rpi_diagnostics.cpp
gauss_driver/src/stepper/: gauss_can_driver.cpp
gauss_python_api/: CMakeLists.txt  package.xml  setup.py
gauss_python_api/src/gauss_python_api/: gauss_api.py
gauss_user_interface/: CMakeLists.txt  package.xml  setup.py
gauss_user_interface/blockly_code_generator/: blockly_code_generator_server.js  gauss_python_generators.js  package-lock.json  package.json
gauss_user_interface/scripts/: joystick_interface.py  sequence_action_server.py  sequence_autorun.py  sequence_manager.py  user_interface.py
gauss_user_interface/src/gauss_user_interface/: gauss_ros_logger.py
gauss_user_interface/src/gauss_user_interface/sequences/: blockly_code_generator.py  gauss_file_exception.py  sequence.py  sequence_action_type.py  sequence_code_executor.py  sequence_command_type.py  sequence_file_handler.py
(+119 files in other folders)
