<?xml version="1.0"?>
<package>
  <name>gauss_bringup</name>
  <version>1.0.0</version>
  <description>The gauss_bringup package</description>
  <maintainer email="jeremy@todo.todo">jeremy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
