<?xml version="1.0"?>
<package format="2">
  <name>gauss_driver</name>
  <version>1.0.0</version>
  <description>The gauss_driver package</description>
  <maintainer email="jeremy@todo.todo">jeremy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gauss_msgs</build_depend>
  
  <!-- ros_control -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>mcp_can_rpi</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gauss_msgs</build_export_depend>
  
  <!-- ros_control -->
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>mcp_can_rpi</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gauss_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>mcp_can_rpi</exec_depend>

  <!-- ros_control -->
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
