<?xml version="1.0"?>
<package format="2">
  <name>gauss_python_api</name>
  <version>1.0.0</version>
  <description>The gauss_python_api package</description>
  <maintainer email="jeremy@todo.todo">jeremy</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gauss_msgs</build_depend>
  <build_depend>gauss_commander</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gauss_msgs</build_export_depend>
  <build_export_depend>gauss_commander</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gauss_msgs</exec_depend>
  <exec_depend>gauss_commander</exec_depend>

  <export>
  </export>
</package>
