<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_workbench_msgs</name>
  <version>1.0.0</version>
  <description>
    This package includes ROS messages and services for dynamixel_workbench packages
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/dynamixel_workbench_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_workbench/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench-msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench-msgs/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
